<resources>
    <string name="app_name">App LisbonPH</string>
    <string name="action_profile">Perfil</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="enter_button">Entrar</string>
    <string name="submit_button">Submeter</string>
    <string name="register_button">Registar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="register_event_button">Inscrever</string>

    <string name="username">Utilizador</string>
    <string name="user_login">Utilizador</string>
    <string name="email">Email</string>
    <string name="name">Nome Completo</string>
    <string name="invoiceName">Nome para Fatura</string>
    <string name="certificateName">Nome para Certificado</string>
    <string name="phone">Telefone</string>
    <string name="citizenCard">Nº Cartão Cidadão</string>
    <string name="workBooklet">Nº Carteira Profissional</string>
    <string name="nif">NIF</string>
    <string name="address">Morada</string>
    <string name="zipCode">Código-Postal</string>
    <string name="password">Password</string>
    <string name="old_password">Password Anterior</string>
    <string name="new_password">Password Nova</string>
    <string name="confirmPass">Confirmar Password</string>
    <string name="confirmNewPass">Confirmar Password Nova</string>
</resources>
